add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(ObjCARC)
add_subdirectory(printCode)
#add_subdirectory(assign)
#add_subdirectory(fact)
add_subdirectory(addInline)
add_subdirectory(factBool)
add_subdirectory(factInt)
add_subdirectory(factArray)
add_subdirectory(fact_preCalcul)
add_subdirectory(factPass)
add_subdirectory(factCombine)
add_subdirectory(contract)
add_subdirectory(GenAST)
add_subdirectory(aliasAnaly)

